Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

0.1.0   2005-04-27  Device configuration work in progress...

* Device configuration is now complete (EXPERIMENTAL).


0.0.5   2005-03-04  Fifth alpha-release.

* Fixed device driver type channel information gathering,
  which was severely flawed, dropping all channel session
  configurations to the default audio driver type (which
  is ALSA) unexpectedly.

* Channels are now properly renumbered when saving to a
  session LSCP script, assuming that it should be always
  loaded from scratch (i.e. zero channels).

* Disabled MIDI port setting on channel dialog, and on
  session file save, as its use is still troublesome.

* Added new menu and toolbar option: Reset All Channels.

* Channel setup changes are now properly filtered, as for
  only those settings that are actually changed gets applied;
  change information are now also posted to messages window.

* Drag-and-drop of either session files (LSCP scripts) or
  instrument files (GIG) are now supported. Multiple files
  drop is allowed, but it only makes sense for instrument
  files, each one prompting to create a new sampler channel.

* Drag-and-drop to an existing channel strip is now also 
  featured, allowing the in-place change of the channel 
  sampler instrument file.

* Actual instrument names are now optionally retrieved
  from the instrument file, even though libgig is available,
  avoiding excessively annoying load times while on the
  channel dialog, when huge instrument files are selected.

* Set to ignore the SIGPIPE ("Broken pipe") signal, where
  available, as the default handler is usually fatal when
  a JACK client is zombified abruptly.

* Messages window limit is now enforced only when the line
  count exceeds in one third the user configured line count
  maximum; if Qt 3.2.0+ is in use, the QTextView widget is
  otherwise set to the optimized Qt::LogText format.

